test/files/neg/t6082.scala
class annot(notValue: String) extends annotation.ConstantAnnotation
@annot("") class C
